Fix program table scrollbar not functioning

--- a/GCE/src/main/resources/tech/houssemnasri/gce/App.css
+++ b/GCE/src/main/resources/tech/houssemnasri/gce/App.css
@@ -759,32 +759,6 @@
     -fx-padding: -2 0 0 0;
 }
 
-.label:disabled,
-.split-menu-button:disabled,
-.choice-box:disabled,
-.combo-box-base:disabled,
-.date-cell:disabled > *,
-.tree-view:disabled,
-.table-view:disabled,
-.titled-pane:disabled > .title,
-.accordion:disabled > .titled-pane > .title,
-.tab-pane > .tab-header-area > .headers-region > .tab:disabled,
-.menu:disabled,
-.menu-item:disabled,
-.list-cell:filled:selected:focused:disabled,
-.list-cell:filled:selected:disabled,
-.tree-cell:filled:selected:focused:disabled,
-.tree-cell:filled:selected:disabled,
-.tree-cell > .tree-disclosure-node:disabled,
-.tree-table-row-cell > .tree-disclosure-node:disabled,
-.table-row-cell:selected:disabled,
-.tree-table-row-cell:selected:disabled,
-.table-cell:selected:disabled,
-.tree-table-cell:selected:disabled,
-.spinner:disabled {
-    -fx-opacity: 1.0;
-}
-
 .tab:disabled:hover {
     -fx-color: -fx-base;
 }
